--- a/apex-crm1001/config.json
+++ b/apex-crm1001/config.json
@@ -1,8 +1,8 @@
 {
-  "apex_version" : "26.1.047",
+  "apex_version" : "26.1.049",
   "api_version" : "2099.99.99",
-  "app_id" : "1001",
+  "app_id" : "1010",
   "default_id_offset" : "0",
-  "default_owner" : "APEX_AI_DAYS",
-  "workspace_id" : "2731570819796919"
+  "default_owner" : "APEX_2233",
+  "workspace_id" : "3000476711077570"
 }
