--- a/apex-crm1001/config.json
+++ b/apex-crm1001/config.json
@@ -3,6 +3,6 @@
   "api_version" : "2099.99.99",
   "app_id" : "1010",
   "default_id_offset" : "0",
-  "default_owner" : "APEX_2233",
+  "default_owner" : "APEX_AI_DAYS",
   "workspace_id" : "2731570819796919"
 }
